Change language file encoding

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -59,8 +59,8 @@ skinsrestorer.wait_a_minute={prefix} &4Error&8: &cPlease wait a minute before re
 skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
 skinsrestorer.skinsmenu_open={prefix} &2Opening the skins menu...
 skinsrestorer.skinsmenu_title_new=&9Skins Menu - Page {0}
-skinsrestorer.skinsmenu_next_page=&a&l»&7 Next Page&a&l »
-skinsrestorer.skinsmenu_previous_page=&e&l«&7 Previous Page&e&l «
+skinsrestorer.skinsmenu_next_page=&a&lÂ»&7 Next Page&a&l Â»
+skinsrestorer.skinsmenu_previous_page=&e&lÂ«&7 Previous Page&e&l Â«
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Remove Skin&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Click to select this skin
 skinsrestorer.skin_search_message={prefix} &2You can find skins matching &a{0}&2 here: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
@@ -79,3 +79,4 @@ skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \
             \n    &2/skin <skinname> &7-&f Changes your skin. \
             \n    &2/skin update &7-&f Updates your skin. \
             \n    &2/skin clear &7-&f Clears your skin.
+
