--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -5,8 +5,10 @@
 #
 # We from SRTeam thank you for using our plugin!
 #
-# For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
-# For Advanced help or other go to our Discord: https://skinsrestorer.net/discord
+# For more information about messages -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
+# For Advanced help go to our Discord -> https://skinsrestorer.net/discord
+# Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
+# Is this file empty below? That means the language was not yet translated.
 skinsrestorer.prefix=&e[&2SkinsRestorer&e]
 skinsrestorer.help_help_command= [help]
 skinsrestorer.help_skin_set=Changes your skin.
