add more commands!
proxy:
- added command: /skull get
- added command: /skull give
- added command: /skull props
- done CommandReplacements
- added locale

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -25,13 +25,18 @@ skinsrestorer.help_sr_drop=Removes players or skin data.
 skinsrestorer.help_sr_props=Displays the players current skin properties.
 skinsrestorer.help_sr_apply_skin=Re-apply the skin for target user.
 skinsrestorer.help_sr_createcustom=Create a custom server wide skin.
-skinsrestorer.syntax_defaultcommand= <skin/url>
-skinsrestorer.syntax_skinset= <skin>
-skinsrestorer.syntax_skinset_other= <target> <skin/url>
-skinsrestorer.syntax_skinurl= <skinurl> [classic/slim]
-skinsrestorer.syntax_skinsearch= <search>
-skinsrestorer.syntax_skinupdate_other= <target>
-skinsrestorer.syntax_skinclear_other= <target>
+skinsrestorer.help_skull_get=Get your skull
+skinsrestorer.help_skull_give=Give a skull to a player
+skinsrestorer.help_skull_update=Update your skull
+skinsrestorer.help_skull_props=Get your skull properties
+skinsrestorer.syntax_defaultcommand=<skin/url>
+skinsrestorer.syntax_skinset=<skin>
+skinsrestorer.syntax_skinset_other=<target> <skin/url>
+skinsrestorer.syntax_skinurl=<skinurl> [classic/slim]
+skinsrestorer.syntax_skinsearch=<search>
+skinsrestorer.syntax_skinupdate_other=<target>
+skinsrestorer.syntax_skinclear_other=<target>
+skinsrestorer.syntax_skull_give=<player> <skullSource> <value> [SkinVariant]
 skinsrestorer.completions_skin=<Skin>
 skinsrestorer.completions_skinname=<SkinName>
 skinsrestorer.completions_skinurl=<SkinUrl>
