add message & perms

--- a/shared/src/main/resources/languages/language.properties
+++ b/shared/src/main/resources/languages/language.properties
@@ -36,6 +36,7 @@ skinsrestorer.syntax_skinurl=<skinurl> [classic/slim]
 skinsrestorer.syntax_skinsearch=<search>
 skinsrestorer.syntax_skinupdate_other=<target>
 skinsrestorer.syntax_skinclear_other=<target>
+skinsrestorer.syntax_skull_get=<skullSource> <value> [SkinVariant]
 skinsrestorer.syntax_skull_give=<player> <skullSource> <value> [SkinVariant]
 skinsrestorer.completions_skin=<Skin>
 skinsrestorer.completions_skinname=<SkinName>
