--- a/shared/src/main/resources/languages/language_tr.properties
+++ b/shared/src/main/resources/languages/language_tr.properties
@@ -1,6 +1,6 @@
 ##############################
 #  SkinsRestorer messages
-#  Version: 14.2.4-SNAPSHOT
+#  Version: ${version}
 ##############################
 #
 # We from SRTeam thank you for using our plugin!
@@ -10,74 +10,71 @@
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
 skinsrestorer.prefix=&e[&6BambuCraft&e]
-skinsrestorer.help_help_command=[yard?m]
-skinsrestorer.help_skin_set=Görünüm de?i?tir.
-skinsrestorer.help_skin_set_other=Hedef oyuncu için görünüm de?i?tir.
-skinsrestorer.help_skin_set_other_url=Hedef oyuncunun görünümünü URL ile de?i?tir.
-skinsrestorer.help_skin_clear=Görünümleri temizle.
-skinsrestorer.help_skin_clear_other=Hedef oyuncunun görünümlerini temizle.
-skinsrestorer.help_skin_search=?stedi?iniz görünümü aray?n.
-skinsrestorer.help_skin_update=Görünümünü güncelle.
-skinsrestorer.help_skin_update_other=Hedef oyuncunun görünümünü güncelleyin.
-skinsrestorer.help_sr_reload=Konfigürasyon dosyalar?n? yenileyin.
+skinsrestorer.help_help_command= [yardÄ±m]
+skinsrestorer.help_skin_set=GÃ¶rÃ¼nÃ¼m deÄŸiÅŸtir.
+skinsrestorer.help_skin_set_other=Hedef oyuncu iÃ§in gÃ¶rÃ¼nÃ¼m deÄŸiÅŸtir.
+skinsrestorer.help_skin_set_other_url=Hedef oyuncunun gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ URL ile deÄŸiÅŸtir.
+skinsrestorer.help_skin_clear=GÃ¶rÃ¼nÃ¼mleri temizle.
+skinsrestorer.help_skin_clear_other=Hedef oyuncunun gÃ¶rÃ¼nÃ¼mlerini temizle.
+skinsrestorer.help_skin_search=Ä°stediÄŸiniz gÃ¶rÃ¼nÃ¼mÃ¼ arayÄ±n.
+skinsrestorer.help_skin_update=GÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ gÃ¼ncelle.
+skinsrestorer.help_skin_update_other=Hedef oyuncunun gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ gÃ¼ncelleyin.
+skinsrestorer.help_sr_reload=KonfigÃ¼rasyon dosyalarÄ±nÄ± yenileyin.
 skinsrestorer.help_sr_status=API servisi isteyen pluginleri kontrol edin.
-skinsrestorer.help_sr_drop=Oyuncunun ya da görünümünün datas?n? kald?r?n.
-skinsrestorer.help_sr_props=Oyuncunun ?u anki görünüm ayarlar?n? görüntüleyin.
-skinsrestorer.help_sr_apply_skin=Hedef oyuncunun görünümünü tekrar girin.
-skinsrestorer.help_sr_createcustom=Sunucu için özel görünüm olu?turun.
-skinsrestorer.syntax_defaultcommand= <görünüm/url>
-skinsrestorer.syntax_skinset= <görünüm>
-skinsrestorer.syntax_skinset_other= <hedef> <görünüm/url>
-skinsrestorer.syntax_skinurl= <görünümurl> [classic/slim]
+skinsrestorer.help_sr_drop=Oyuncunun ya da gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼n datasÄ±nÄ± kaldÄ±rÄ±n.
+skinsrestorer.help_sr_props=Oyuncunun ÅŸu anki gÃ¶rÃ¼nÃ¼m ayarlarÄ±nÄ± gÃ¶rÃ¼ntÃ¼leyin.
+skinsrestorer.help_sr_apply_skin=Hedef oyuncunun gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ tekrar girin.
+skinsrestorer.help_sr_createcustom=Sunucu iÃ§in Ã¶zel gÃ¶rÃ¼nÃ¼m oluÅŸturun.
+skinsrestorer.syntax_defaultcommand= <gÃ¶rÃ¼nÃ¼m/url>
+skinsrestorer.syntax_skinset= <gÃ¶rÃ¼nÃ¼m>
+skinsrestorer.syntax_skinset_other= <hedef> <gÃ¶rÃ¼nÃ¼m/url>
+skinsrestorer.syntax_skinurl= <gÃ¶rÃ¼nÃ¼murl> [classic/slim]
 skinsrestorer.syntax_skinsearch= <ara>
 skinsrestorer.syntax_skinupdate_other= <hedef>
 skinsrestorer.syntax_skinclear_other= <hedef>
-skinsrestorer.completions_skin=<görünüm>
-skinsrestorer.completions_skinname=<görünümad?>
-skinsrestorer.completions_skinurl=<görünümUrl>
-skinsrestorer.command_server_not_allowed_message={prefix} &4Hata&8: &cKomut sunucuda yasakland?. {0}.
-skinsrestorer.player_has_no_permission_skin={prefix} &4Hata&8: &cGörünüm de?i?tirmek için iznin yok.
-skinsrestorer.player_has_no_permission_url={prefix} &4Hata&8: &cGörünüm de?i?tirmek için iznin yok URL arac?l???yla.
-skinsrestorer.skin_disabled={prefix} &4Hata&8: &cBu görünüm yönetici taraf?ndan engellendi.
-skinsrestorer.skinurl_disallowed={prefix} &4Hata&8: &cBu alana yönetici taraf?ndan izin verilmedi.
-skinsrestorer.not_premium={prefix} &4Hata&8: &cPremium oyuncu bu isimle bulunamad?.
-skinsrestorer.invalid_player={prefix} &4Hata&8: &c{0} bulunamad? isimle ya da URL ile.
-skinsrestorer.skin_cooldown={prefix} &4Hata&8: &cTekrar görünümünü &e{0} &csaniye sonra de?i?tirebilirsin.
-skinsrestorer.skin_change_success={prefix} &2Görünümün de?i?ti.
-skinsrestorer.skin_clear_success={prefix} &2Görünümün temizlendi.
-skinsrestorer.skin_clear_issuer={prefix} &2Oyuncunun görünümü temizlendi {0}.
-skinsrestorer.ms_updating_skin={prefix} &2Görünüm yükleniyor, lütfen bekle...(Biraz vakit alabilir)
-skinsrestorer.success_create_skin={prefix} &2Görünüm {0} yarat?ld?!
-skinsrestorer.success_updating_skin={prefix} &2Görünümün güncellendi.
-skinsrestorer.success_updating_skin_other={prefix} &2Oyuncunun görünümü güncellendi. {0}.
-skinsrestorer.error_updating_skin={prefix} &4Hata&8: &cGörünümün güncellenirken hata oldu, tekrar dene!
-skinsrestorer.error_updating_url={prefix} &4Hata&8: &cÖzel görünüm yükleyemezsin! \n&cTekrar dene /skin url
-skinsrestorer.error_updating_customskin={prefix} &4Hata&8: &cGörünüm yüklenemez, çünkü özel.
-skinsrestorer.error_invalid_urlskin={prefix} &4Hata&8: &cBilinmeyen görünüm URL ya da format,\n&cCildinizi imgur'a yükleyin ve sa? t?klay?n 'kopyala resim URL' \n&cFor guide see: &c&oskinsrestorer.net/skinurl
-skinsrestorer.error_ms_full={prefix} &4MS Hata&8: &cAPI görünümünü yüklerken zaman a??m?na u?rad?. Lütfen tekrar dene. (MineSkin)
+skinsrestorer.completions_skin=<gÃ¶rÃ¼nÃ¼m>
+skinsrestorer.completions_skinname=<gÃ¶rÃ¼nÃ¼madÄ±>
+skinsrestorer.completions_skinurl=<gÃ¶rÃ¼nÃ¼mUrl>
+skinsrestorer.command_server_not_allowed_message={prefix} &4Hata&8: &cKomut sunucuda yasaklandÄ±. {0}.
+skinsrestorer.player_has_no_permission_skin={prefix} &4Hata&8: &cGÃ¶rÃ¼nÃ¼m deÄŸiÅŸtirmek iÃ§in iznin yok.
+skinsrestorer.player_has_no_permission_url={prefix} &4Hata&8: &cGÃ¶rÃ¼nÃ¼m deÄŸiÅŸtirmek iÃ§in iznin yok URL aracÄ±lÄ±ÄŸÄ±yla.
+skinsrestorer.skin_disabled={prefix} &4Hata&8: &cBu gÃ¶rÃ¼nÃ¼m yÃ¶netici tarafÄ±ndan engellendi.
+skinsrestorer.skinurl_disallowed={prefix} &4Hata&8: &cBu alana yÃ¶netici tarafÄ±ndan izin verilmedi.
+skinsrestorer.not_premium={prefix} &4Hata&8: &cPremium oyuncu bu isimle bulunamadÄ±.
+skinsrestorer.invalid_player={prefix} &4Hata&8: &c{0} bulunamadÄ± isimle ya da URL ile.
+skinsrestorer.skin_cooldown={prefix} &4Hata&8: &cTekrar gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ &e{0} &csaniye sonra deÄŸiÅŸtirebilirsin.
+skinsrestorer.skin_change_success={prefix} &2GÃ¶rÃ¼nÃ¼mÃ¼n deÄŸiÅŸti.
+skinsrestorer.skin_clear_success={prefix} &2GÃ¶rÃ¼nÃ¼mÃ¼n temizlendi.
+skinsrestorer.skin_clear_issuer={prefix} &2Oyuncunun gÃ¶rÃ¼nÃ¼mÃ¼ temizlendi {0}.
+skinsrestorer.ms_updating_skin={prefix} &2GÃ¶rÃ¼nÃ¼m yÃ¼kleniyor, lÃ¼tfen bekle...(Biraz vakit alabilir)
+skinsrestorer.success_create_skin={prefix} &2GÃ¶rÃ¼nÃ¼m {0} yaratÄ±ldÄ±!
+skinsrestorer.success_updating_skin={prefix} &2GÃ¶rÃ¼nÃ¼mÃ¼n gÃ¼ncellendi.
+skinsrestorer.success_updating_skin_other={prefix} &2Oyuncunun gÃ¶rÃ¼nÃ¼mÃ¼ gÃ¼ncellendi. {0}.
+skinsrestorer.error_updating_skin={prefix} &4Hata&8: &cGÃ¶rÃ¼nÃ¼mÃ¼n gÃ¼ncellenirken hata oldu, tekrar dene!
+skinsrestorer.error_updating_url={prefix} &4Hata&8: &cÃ–zel gÃ¶rÃ¼nÃ¼m yÃ¼kleyemezsin! \n&cTekrar dene /skin url
+skinsrestorer.error_updating_customskin={prefix} &4Hata&8: &cGÃ¶rÃ¼nÃ¼m yÃ¼klenemez, Ã§Ã¼nkÃ¼ Ã¶zel.
+skinsrestorer.error_invalid_urlskin={prefix} &4Hata&8: &cBilinmeyen gÃ¶rÃ¼nÃ¼m URL ya da format, \n&cCildinizi imgur'a yÃ¼kleyin ve saÄŸ tÄ±klayÄ±n 'kopyala resim URL' \n&cFor guide see: &c&oskinsrestorer.net/skinurl
+skinsrestorer.error_ms_full={prefix} &4MS Hata&8: &cAPI gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ yÃ¼klerken zaman aÅŸÄ±mÄ±na uÄŸradÄ±. LÃ¼tfen tekrar dene. (MineSkin)
 skinsrestorer.error_ms_generic={prefix} &4MS Hata&8: {0}
-skinsrestorer.generic_error={prefix} &4Hata&8: &cGörünüm verileri istenirken bir hata olu?tu, lütfen daha sonra tekrar deneyin.!
-skinsrestorer.wait_a_minute={prefix} &4Hata&8: &cBu görünümü tekrar istemeden önce lütfen bir dakika bekleyin.
-skinsrestorer.error_no_skin={prefix} &4Hata&8: &cBu oyuncu görünüm ayarlamad?.
-skinsrestorer.skinsmenu_open={prefix} &2Görünüm menüsü aç?l?yor...
-skinsrestorer.skinsmenu_title_new=&9Görünüm menüsü - Sayfa {0}
-skinsrestorer.skinsmenu_next_page=&a&l»&7 Sonraki Sayfa&a&l »
-skinsrestorer.skinsmenu_previous_page=&e&l«&7 Önceki Sayfa&e&l «
-skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Görünümü Kald?r&c&l ]
-skinsrestorer.skinsmenu_select_skin=&2Buraya t?klayarak görünümü ayarla.
-skinsrestorer.skin_search_message={prefix} &2E?lesen görünümleri bulabilirsin &a{0}&2 buradan:  \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
-skinsrestorer.admin_set_skin={prefix} &2Ayarlad?n {0}'in görünümünü.
+skinsrestorer.generic_error={prefix} &4Hata&8: &cGÃ¶rÃ¼nÃ¼m verileri istenirken bir hata oluÅŸtu, lÃ¼tfen daha sonra tekrar deneyin.!
+skinsrestorer.wait_a_minute={prefix} &4Hata&8: &cBu gÃ¶rÃ¼nÃ¼mÃ¼ tekrar istemeden Ã¶nce lÃ¼tfen bir dakika bekleyin.
+skinsrestorer.error_no_skin={prefix} &4Hata&8: &cBu oyuncu gÃ¶rÃ¼nÃ¼m ayarlamadÄ±.
+skinsrestorer.skinsmenu_open={prefix} &2GÃ¶rÃ¼nÃ¼m menÃ¼sÃ¼ aÃ§Ä±lÄ±yor...
+skinsrestorer.skinsmenu_title_new=&9GÃ¶rÃ¼nÃ¼m menÃ¼sÃ¼ - Sayfa {0}
+skinsrestorer.skinsmenu_next_page=&a&lÂ»&7 Sonraki Sayfa&a&l Â»
+skinsrestorer.skinsmenu_previous_page=&e&lÂ«&7 Ã–nceki Sayfa&e&l Â«
+skinsrestorer.skinsmenu_clear_skin=&c&l[ &7GÃ¶rÃ¼nÃ¼mÃ¼ KaldÄ±r&c&l ]
+skinsrestorer.skinsmenu_select_skin=&2Buraya tÄ±klayarak gÃ¶rÃ¼nÃ¼mÃ¼ ayarla.
+skinsrestorer.skin_search_message={prefix} &2EÅŸlesen gÃ¶rÃ¼nÃ¼mleri bulabilirsin &a{0}&2 buradan: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2If no skins are found, you can always find some skins at https://namemc.com/minecraft-skins/tag \nYou can set the skin using the skin link:\n /skin https://namemc.com/skin/
+skinsrestorer.admin_set_skin={prefix} &2AyarladÄ±n {0}'in gÃ¶rÃ¼nÃ¼mÃ¼nÃ¼.
 skinsrestorer.data_dropped={prefix} &2{0} data bozuldu {1}.
-skinsrestorer.admin_applyskin_succes={prefix} &2Oyuncu görünümü yenilendi!
-skinsrestorer.admin_applyskin_error={prefix} &4Hata&8: &coyuncu görünümü yenilenemedi!
-skinsrestorer.status_ok={prefix} &2Mojang API ba?lant?s? ba?ar?l?!
-skinsrestorer.alt_api_failed={prefix} &4Hata&8: &cSkin Data API a??r? yüklendi, sonra tekrar dene!
-skinsrestorer.ms_api_failed={prefix} &4Hata&8: &cMineSkin API a??r? yüklendi, sonra tekrar dene!
-skinsrestorer.no_skin_data={prefix} &4Hata&8: &cOyuncu görünümü yok! Bu oyuncunun görünümü var m??
-skinsrestorer.reload={prefix} &2Konfigürasyon ve dosyalar ba?ar?yla yenilendi!
-skinsrestorer.outdated={prefix} &4Eski bir SkinRestorer versiyonu kullan?yorsun!\n&cPlease update to the latest version on Spigot:\n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
+skinsrestorer.admin_applyskin_succes={prefix} &2Oyuncu gÃ¶rÃ¼nÃ¼mÃ¼ yenilendi!
+skinsrestorer.admin_applyskin_error={prefix} &4Hata&8: &coyuncu gÃ¶rÃ¼nÃ¼mÃ¼ yenilenemedi!
+skinsrestorer.status_ok={prefix} &2Mojang API baÄŸlantÄ±sÄ± baÅŸarÄ±lÄ±!
+skinsrestorer.alt_api_failed={prefix} &4Hata&8: &cSkin Data API aÅŸÄ±rÄ± yÃ¼klendi, sonra tekrar dene!
+skinsrestorer.ms_api_failed={prefix} &4Hata&8: &cMineSkin API aÅŸÄ±rÄ± yÃ¼klendi, sonra tekrar dene!
+skinsrestorer.no_skin_data={prefix} &4Hata&8: &cOyuncu gÃ¶rÃ¼nÃ¼mÃ¼ yok! Bu oyuncunun gÃ¶rÃ¼nÃ¼mÃ¼ var mÄ±?
+skinsrestorer.reload={prefix} &2KonfigÃ¼rasyon ve dosyalar baÅŸarÄ±yla yenilendi!
+skinsrestorer.outdated={prefix} &4Eski bir SkinRestorer versiyonu kullanÄ±yorsun!\n&cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 skinsrestorer.sr_line=&7&m----------------------------------------
-skinsrestorer.custom_help_if_enabled=&2&lSkinsRestorer &7- &f&lv{0} \
-            \n    &2/skin <skinname> &7-&f Görünümünü de?i?tirir. \
-            \n    &2/skin update &7-&f Görünümünü günceller. \
-            \n    &2/skin clear &7-&f Görünümünü temizler.
+skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinname> &7-&f GÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ deÄŸiÅŸtirir. \n    &2/skin update &7-&f GÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ gÃ¼nceller. \n    &2/skin clear &7-&f GÃ¶rÃ¼nÃ¼mÃ¼nÃ¼ temizler.
