New Crowdin updates (#1148)

--- a/shared/src/main/resources/languages/language_fr.properties
+++ b/shared/src/main/resources/languages/language_fr.properties
@@ -9,7 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.help_help_command= [aide]
+skinsrestorer.help_help_command=[aide]
 skinsrestorer.help_skin_set=Modifie votre skin.
 skinsrestorer.help_skin_set_other=Définit le skin d'un joueur cible.
 skinsrestorer.help_skin_set_other_url=Définit le skin d'un joueur cible à partir d'une URL.
@@ -24,13 +24,13 @@ skinsrestorer.help_sr_drop=Supprime les joueurs ou les données de skin.
 skinsrestorer.help_sr_props=Affiche les propriétés actuelles du skin des joueurs.
 skinsrestorer.help_sr_apply_skin=Réappliquer le skin pour l'utilisateur cible.
 skinsrestorer.help_sr_createcustom=Créer un skin personnalisé à l'échelle du serveur.
-skinsrestorer.syntax_defaultcommand= <skin/url>
-skinsrestorer.syntax_skinset= <skin>
-skinsrestorer.syntax_skinset_other= <cible> <skin/url>
-skinsrestorer.syntax_skinurl= <skinurl> [classique/mince]
-skinsrestorer.syntax_skinsearch= <rechercher>
-skinsrestorer.syntax_skinupdate_other= <cible>
-skinsrestorer.syntax_skinclear_other= <cible>
+skinsrestorer.syntax_defaultcommand=<skin/url>
+skinsrestorer.syntax_skinset=<skin>
+skinsrestorer.syntax_skinset_other=<cible> <skin/url>
+skinsrestorer.syntax_skinurl=<skinurl> [classique/mince]
+skinsrestorer.syntax_skinsearch=<rechercher>
+skinsrestorer.syntax_skinupdate_other=<cible>
+skinsrestorer.syntax_skinclear_other=<cible>
 skinsrestorer.completions_skin=<Skin>
 skinsrestorer.completions_skinname=<NomduSkin>
 skinsrestorer.completions_skinurl=<SkinUrl>
@@ -64,7 +64,7 @@ skinsrestorer.skinsmenu_next_page=&a&l»&7 Page suivante&a&l »
 skinsrestorer.skinsmenu_previous_page=&e&l«&7 Page Précédente&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Retirer le skin&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Cliquez pour sélectionner ce skin
-skinsrestorer.skin_search_message={prefix} &2Vous pouvez trouver des skins correspondant &a{0}&2 ici: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Si aucun skin n'est trouvé, vous pouvez toujours trouver des skins sur https://namemc. om/minecraft-skins/tag \nVous pouvez définir le skin en utilisant le lien skin :\n /skin https://namemc.com/skin/
+skinsrestorer.skin_search_message={prefix} &2Vous pouvez trouver des skins correspondant &a{0}&2 ici: \n&ahttps://namemc. om/minecraft-skins/tag/{0} \n\n&2Si aucun skin n'est trouvé, vous pouvez toujours trouver des skins sur https://namemc.com/minecraft-skins/tag \nVous pouvez définir le skin en utilisant le lien skin :\n /skin https://namemc.com/skin/
 skinsrestorer.admin_set_skin={prefix} &2Vous avez défini le skin de {0}.
 skinsrestorer.data_dropped={prefix} &2{0} données supprimées pour {1}.
 skinsrestorer.admin_applyskin_succes={prefix} &2Le skin a été actualisé !
@@ -75,4 +75,4 @@ skinsrestorer.ms_api_failed={prefix} &4Erreur&8: &cL'API MineSkin est surchargé
 skinsrestorer.no_skin_data={prefix} &4Erreur&8: &cAucune donnée de skin acquise ! Est-ce que ce joueur a un skin ?
 skinsrestorer.reload={prefix} &2La configuration et la locale ont été rechargées!
 skinsrestorer.outdated={prefix} &4Vous utilisez une version obsolète de SkinsRestorer!\n&cVeuillez mettre à jour vers la dernière version sur Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
-skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinname> &7-&f Modifie votre skin. \n    &2/skin update &7-&f Met à jour votre peau. \n    &2/skin clear &7-&f Nettoie votre peau.
+
