--- a/shared/src/main/resources/languages/language_hu.properties
+++ b/shared/src/main/resources/languages/language_hu.properties
@@ -9,7 +9,6 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.help_help_command= [help]
 skinsrestorer.help_skin_set=Megváltoztatja a kinézeted.
 skinsrestorer.help_skin_set_other=Beállítja a megadott játékos kinézetét.
 skinsrestorer.help_skin_set_other_url=Megadott játékos kinézetét állítja be a megadott URL alapján.
@@ -24,13 +23,13 @@ skinsrestorer.help_sr_drop=Törli a játékos, vagy a kinézeti adatokat.
 skinsrestorer.help_sr_props=Megjeleníti a játékos jelenlegi kinézetének tulajdonságait.
 skinsrestorer.help_sr_apply_skin=Állítsd be újra a megadott játékos kinézetét!
 skinsrestorer.help_sr_createcustom=Hozz létre egy szerverszintű kinézetet!
-skinsrestorer.syntax_defaultcommand= <kinézet/URL>
-skinsrestorer.syntax_skinset= <kinézet>
-skinsrestorer.syntax_skinset_other= <játékos> <kinézet/URL>
-skinsrestorer.syntax_skinurl= <kinézeti URL> [classic/slim]
-skinsrestorer.syntax_skinsearch= <keresés>
-skinsrestorer.syntax_skinupdate_other= <játékos>
-skinsrestorer.syntax_skinclear_other= <játékos>
+skinsrestorer.syntax_defaultcommand=<kinézet/URL>
+skinsrestorer.syntax_skinset=<kinézet>
+skinsrestorer.syntax_skinset_other=<játékos> <kinézet/URL>
+skinsrestorer.syntax_skinurl=<kinézeti URL> [classic/slim]
+skinsrestorer.syntax_skinsearch=<keresés>
+skinsrestorer.syntax_skinupdate_other=<játékos>
+skinsrestorer.syntax_skinclear_other=<játékos>
 skinsrestorer.completions_skin=<kinézet>
 skinsrestorer.completions_skinname=<kinézetnév>
 skinsrestorer.completions_skinurl=<kinézeti URL>
@@ -50,9 +49,8 @@ skinsrestorer.success_create_skin={prefix} &2Kinézet {0} létrehozva.
 skinsrestorer.success_updating_skin={prefix} &2Kinézeted frissítve.
 skinsrestorer.success_updating_skin_other={prefix} &2{0} játékos kinézete frissítve.
 skinsrestorer.error_updating_skin={prefix} &4Hiba&8: &cHiba adódott a kinézeted frissítésével. Kérlek, próbáld meg később!
-skinsrestorer.error_updating_url={prefix} &4Hiba&8: &cNem frissítheted az egyéni URL kinézeteket!\n&cProbáld újra a /skin url parancs használatával
+skinsrestorer.error_updating_url={prefix} &4Hiba&8: &cNem frissítheted az egyéni URL kinézeteket! \n&cProbáld újra a /skin url parancs használatával
 skinsrestorer.error_updating_customskin={prefix} &4Hiba&8: &cKinézeted egyedi, ezért nem frissíthető.
-skinsrestorer.error_invalid_urlskin={prefix} &4Hiba&8: &cÉrvénytelen kinézeti URL vagy formátum.\n&cPróbáld meg feltölteni a kinézeted Imgur-ra, majd onnan másold ki az URL-t ('copy image address')\n&cSegítség: &c&oskinsrestorer.net/skinurl
 skinsrestorer.error_ms_full={prefix} &4MS Hiba&8: &cAz API nem válaszol a kinézeted feltöltésére. Kérlek, próbáld később! (MineSkin)
 skinsrestorer.error_ms_generic={prefix} &4MS Hiba&8: {0}
 skinsrestorer.generic_error={prefix} &4Hiba&8: &cHiba adódott a kinézeti adatok lekérése közben. Kérlek, próbáld később!
@@ -64,16 +62,16 @@ skinsrestorer.skinsmenu_next_page=&a&l»&7 Következő oldal&a&l »
 skinsrestorer.skinsmenu_previous_page=&e&l«&7 Előző oldal&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[&7 Kinézet eltávolítása&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Kattints a kinézet kiválasztásához
-skinsrestorer.skin_search_message={prefix} &2Itt találhatsz &a{0} &2kinézettel megegyezőeket:\n&ahttp://namemc.com/minecraft-skins/tag/{0}\n\n&2Ha nincs megfelelő kinézetet, találhatsz más kinézeteket itt: &ahttps://namemc.com/minecraft-skins/tag\n&2Beállíthatod a kinézeted a kinézeti linkkel:\n/skin https://namemc.com/skin/
+skinsrestorer.skin_search_message={prefix} &2Itt találhatsz &a{0} &2kinézettel megegyezőeket: \n&ahttp://namemc.com/minecraft-skins/tag/{0} \n\n&2Ha nincs megfelelő kinézetet, találhatsz más kinézeteket itt: &ahttps://namemc.com/minecraft-skins/tag \n&2Beállíthatod a kinézeted a kinézeti linkkel:\n /skin https://namemc.com/skin/
 skinsrestorer.admin_set_skin={prefix} &2{0} kinézete beállítva.
 skinsrestorer.data_dropped={prefix} &2{0} adatok {1} számára törölve.
-skinsrestorer.admin_applyskin_succes={prefix} &2Játékos kinézete frissítve.
-skinsrestorer.admin_applyskin_error={prefix} &4Hiba&8: &cJátékos kinézetét NEM sikerült frissíteni.
-skinsrestorer.status_ok={prefix} &2Csatlakozás a Mojang API-hoz sikeres.
+skinsrestorer.admin_applyskin_succes={prefix} &2Játékos kinézete frissítve!
+skinsrestorer.admin_applyskin_error={prefix} &4Hiba&8: &cJátékos kinézetét NEM sikerült frissíteni!
+skinsrestorer.status_ok={prefix} &2Csatlakozás a Mojang API-hoz sikeres!
 skinsrestorer.alt_api_failed={prefix} &4Hiba&8: &cKinézeti adat API túlterhelve, kérlek, próbáld meg később!
 skinsrestorer.ms_api_failed={prefix} &4Hiba&8: &cMineSkin API túlterhelve, kérlek, próbáld meg később!
 skinsrestorer.no_skin_data={prefix} &4Hiba&8: &cNincs kinézeti információ. Van ennek a játékosnak kinézete?
-skinsrestorer.reload={prefix} &2Konfiguráció és fordítás újratöltve.
-skinsrestorer.outdated={prefix} &4A SkinsRestorer egy elavult verzióját használod.\n&cKérünk, frissíts a legújabb verzióra Spigot-on:\n&ehttps://www.spigotmy.org/resources/skinsrestorer.2124/
-skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7-#f#lv{0}\n&2/skin <kinézetnév> &7-&f Kinézeted megváltoztatása\n&2/skin update &7-&f Kinézeted frissítése\n&2/skin clear &7-&f Kinézeted törlése
+skinsrestorer.reload={prefix} &2Konfiguráció és fordítás újratöltve!
+skinsrestorer.outdated={prefix} &4A SkinsRestorer egy elavult verzióját használod.\n&cKérünk, frissíts a legújabb verzióra Spigot-on: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
+skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <kinézetnév> &7-&f Kinézeted megváltoztatása \n    &2/skin update &7-&f Kinézeted frissítése \n    &2/skin clear &7-&f Kinézeted törlése
 
