--- a/shared/src/main/resources/languages/language_nl.properties
+++ b/shared/src/main/resources/languages/language_nl.properties
@@ -9,7 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.help_help_command= [hulp]
+skinsrestorer.help_help_command=[hulp]
 skinsrestorer.help_skin_set=Werkt je skin bij.
 skinsrestorer.help_skin_set_other=Stelt de skin van een andere speler in.
 skinsrestorer.help_skin_set_other_url=Stelt de skin van een andere speler via link in.
@@ -24,13 +24,13 @@ skinsrestorer.help_sr_drop=Verwijdert spelers van skin gegevens.
 skinsrestorer.help_sr_props=Geeft de huidige skin eigenschappen van de spelers weer.
 skinsrestorer.help_sr_apply_skin=Pas de skin opnieuw toe voor de doelgebruiker.
 skinsrestorer.help_sr_createcustom=Maak een aangepaste server brede skin.
-skinsrestorer.syntax_defaultcommand= <skin/link>
-skinsrestorer.syntax_skinset= <skin>
-skinsrestorer.syntax_skinset_other= <doelspeler> <skin/link>
-skinsrestorer.syntax_skinurl= <skinlink> [klassiek/dun]
-skinsrestorer.syntax_skinsearch= <zoeken>
-skinsrestorer.syntax_skinupdate_other= <doel>
-skinsrestorer.syntax_skinclear_other= <doel>
+skinsrestorer.syntax_defaultcommand=<skin/link>
+skinsrestorer.syntax_skinset=<skin>
+skinsrestorer.syntax_skinset_other=<doelspeler> <skin/link>
+skinsrestorer.syntax_skinurl=<skinlink> [klassiek/dun]
+skinsrestorer.syntax_skinsearch=<zoeken>
+skinsrestorer.syntax_skinupdate_other=<doel>
+skinsrestorer.syntax_skinclear_other=<doel>
 skinsrestorer.completions_skin=<Skin>
 skinsrestorer.completions_skinname=<SkinNaam>
 skinsrestorer.completions_skinurl=<SkinLink>
@@ -75,5 +75,5 @@ skinsrestorer.ms_api_failed={prefix} &4Error&8: &cMineSkin API is overbelast, pr
 skinsrestorer.no_skin_data={prefix} &4Fout&8: &cGeen skin gegevens gevonden! Heeft deze speler een skin?
 skinsrestorer.reload={prefix} &2Configuratie en taal bestanden zijn opnieuw geladen!
 skinsrestorer.outdated={prefix} &4Je gebruikt een verouderde versie van SkinsRestorer!\n&cUpdate aub naar de laatste versie van Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
-skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinname> &7-&f Wijzigt je skin. \n    &2/skin update &7-&f Update je skin. \n    &2/skin clear&7-&f Verwijdert je skin.
+skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinnaam> &7-&f Wijzigt je skin. \n    &2/skin update &7-&f Update je skin. \n    &2/skin clear&7-&f Verwijdert je skin.
 
