--- a/shared/src/main/resources/languages/language_ru.properties
+++ b/shared/src/main/resources/languages/language_ru.properties
@@ -9,7 +9,7 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.help_help_command= [help]
+skinsrestorer.help_help_command=[помощь]
 skinsrestorer.help_skin_set=Изменяет ваш скин.
 skinsrestorer.help_skin_set_other=Устанавливает скин выбранному игроку.
 skinsrestorer.help_skin_set_other_url=Устанавливает скин выбранному игроку по ссылке.
@@ -24,18 +24,8 @@ skinsrestorer.help_sr_drop=Удаляет данные об игроке или 
 skinsrestorer.help_sr_props=Отображает свойства текущего скина игрока.
 skinsrestorer.help_sr_apply_skin=Повторно применяет скин выбранному игроку.
 skinsrestorer.help_sr_createcustom=Создаёт пользовательский скин для всего сервера.
-skinsrestorer.syntax_defaultcommand= <skin/url>
-skinsrestorer.syntax_skinset= <skin>
-skinsrestorer.syntax_skinset_other= <target> <skin/url>
-skinsrestorer.syntax_skinurl= \ <skinurl> [classic/slim]
-skinsrestorer.syntax_skinsearch= <search>
-skinsrestorer.syntax_skinupdate_other= <target>
-skinsrestorer.syntax_skinclear_other= <target>
-skinsrestorer.completions_skin=<Skin>
-skinsrestorer.completions_skinname=<SkinName>
-skinsrestorer.completions_skinurl=<SkinUrl>
 skinsrestorer.command_server_not_allowed_message={prefix} &4Ошибка&8: &cКоманды отключены для сервера {0}.
-skinsrestorer.player_has_no_permission_skin=&4Ошибка&8: &cУ вас нет разрешения на установку этого скина.
+skinsrestorer.player_has_no_permission_skin={prefix} &4Ошибка&8: &cУ вас нет разрешения на установку этого скина.
 skinsrestorer.player_has_no_permission_url={prefix} &4Ошибка&8: &cУ вас недостаточно прав для установки скинов по URL.
 skinsrestorer.skin_disabled={prefix} &4Ошибка&8: &cЭтот скин отключён администратором.
 skinsrestorer.skinurl_disallowed={prefix} &4Ошибка&8: &cЭтот домен не разрешён администратором.
@@ -64,7 +54,7 @@ skinsrestorer.skinsmenu_next_page=&a&l»&7 Следующая страница&a
 skinsrestorer.skinsmenu_previous_page=&e&l«&7 Предыдущая страница&e&l «
 skinsrestorer.skinsmenu_clear_skin=&c&l[ &7 Удалить скин&c&l ]
 skinsrestorer.skinsmenu_select_skin=&2Нажмите, чтобы выбрать этот скин
-skinsrestorer.skin_search_message={prefix} &2Вы можете найти скины по запросу &a{0}&2 здесь: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Если скинов не найдено, вы всегда можете найти некоторые скины по адресу https://namemc. om/minecraft-skins/tag \nВы можете установить скин по ссылке скина:\n /skin https://namemc.com/skin/
+skinsrestorer.skin_search_message={prefix} &2Вы можете найти скины по запросу &a{0}&2 здесь: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Если скинов не найдено, вы всегда можете найти некоторые скины по адресу https://namemc.com/minecraft-skins/tag \nВы можете установить скин по ссылке скина:\n /skin https://namemc.com/skin/
 skinsrestorer.admin_set_skin={prefix} &2Вы установили скин {0}.
 skinsrestorer.data_dropped={prefix} &2{0} данные сброшены для {1}.
 skinsrestorer.admin_applyskin_succes={prefix} &2Скин игрока был обновлён!
@@ -75,5 +65,4 @@ skinsrestorer.ms_api_failed={prefix} &4Ошибка&8: &cAPI скинов пер
 skinsrestorer.no_skin_data={prefix} &4Ошибка&8: &cДанные о скине не получены! У этого игрока есть скин?
 skinsrestorer.reload={prefix} &2Конфиг и локализация были перезагружены!
 skinsrestorer.outdated={prefix} &4Вы используете устаревшую версию SkinsRestorer!\n&cПожалуйста, обновитесь до последней версии на Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
-skinsrestorer.custom_help_if_enabled=  &2&lSkinsRestorer &7- &f&lv{0} \n    &2/skin <skinname> &7-&f Изменяет ваш скин. \n    &2/skin update &7-&f Обновляет ваш скин. \n    &2/skin clear &7-&f Очищает скин.
 
