--- a/shared/src/main/resources/languages/language_uk.properties
+++ b/shared/src/main/resources/languages/language_uk.properties
@@ -9,8 +9,60 @@
 # For Advanced help go to our Discord -> https://skinsrestorer.net/discord
 # Want to help translate the plugin?  -> https://translate.skinsrestorer.net/
 # Is this file empty below? That means the language was not yet translated.
-skinsrestorer.help_help_command= [help]
+skinsrestorer.help_help_command=[help]
 skinsrestorer.help_skin_set=Змінює ваш скін.
 skinsrestorer.help_skin_set_other=Встановлює скін для цільового гравця.
+skinsrestorer.help_skin_set_other_url=Встановлює скін з URL-адреси для цільового гравця.
 skinsrestorer.help_skin_clear=Очищає ваш скін.
+skinsrestorer.help_skin_clear_other=Очищає скін цільового гравця.
+skinsrestorer.help_skin_search=Пошук скіна, який ви бажаєте
+skinsrestorer.help_skin_update=Оновлює ваш скін.
+skinsrestorer.help_skin_update_other=Оновлює скін цільового гравця.
+skinsrestorer.help_sr_reload=Перезавантажує файл налаштування.
+skinsrestorer.help_sr_status=Перевіряє API-служби, які потрібні плагіну.
+skinsrestorer.help_sr_drop=Видаляє дані про гравців або скіна.
+skinsrestorer.help_sr_props=Відображає поточні властивості скіна гравців.
+skinsrestorer.help_sr_apply_skin=Повторно наносить скін для цільового користувача.
+skinsrestorer.help_sr_createcustom=Створює користувацький скін для всього сервера.
+skinsrestorer.command_server_not_allowed_message={prefix} &4Помилка&8: &cКоманди вимкнено для сервера {0}.
+skinsrestorer.player_has_no_permission_skin={prefix} &4Помилка&8: &cВи не маєте дозволу встановити цей скін.
+skinsrestorer.player_has_no_permission_url={prefix} &4Помилка&8: &cВи не маєте дозволу на встановлення скінів за URL-адресою.
+skinsrestorer.skin_disabled={prefix} &4Помилка&8: &cЦей скін вимкнено адміністратором.
+skinsrestorer.skinurl_disallowed={prefix} &4Помилка&8: &cЦей домен не дозволено адміністратором.
+skinsrestorer.not_premium={prefix} &4Помилка&8: &cПреміум-гравець із таким ім'ям не існує.
+skinsrestorer.invalid_player={prefix} &4Помилка&8: &c{0} не є дійсним іменем користувача чи URL-адресою.
+skinsrestorer.skin_cooldown={prefix} &4Помилка&8: &cВи можете знову змінити оформлення через &e{0} &cсекунди.
+skinsrestorer.skin_change_success={prefix} &2Ваш скін було змінено.
+skinsrestorer.skin_clear_success={prefix} &2Ваш скін очищено.
+skinsrestorer.skin_clear_issuer={prefix} &2Скін очищений для гравця {0}.
+skinsrestorer.ms_updating_skin={prefix} &2Завантаження скіна, зачекайте...(Це може зайняти деякий час)
+skinsrestorer.success_create_skin={prefix} &2Скін {0} створено!
+skinsrestorer.success_updating_skin={prefix} &2Ваш скін оновлено.
+skinsrestorer.success_updating_skin_other={prefix} &2Скін оновлено для гравця {0}.
+skinsrestorer.error_updating_skin={prefix} &4Помилка&8: &cПід час оновлення вашого скіна сталася помилка. Будь ласка, спробуйте пізніше!
+skinsrestorer.error_updating_url={prefix} &4Помилка&8: &cВи не можете оновити користувацькі URL-адреси скінів! &cПодайте запит ще раз, використовуючи /skin URL-адреса
+skinsrestorer.error_updating_customskin={prefix} &4Помилка&8: &cСкін не можна оновити, оскільки він користувацький.
+skinsrestorer.error_invalid_urlskin={prefix} &4Помилка&8: &cНедійсна URL-адреса або формат скіна, &cСпробуйте завантажити свій скін на imgur і клацніть правою кнопкою миші «скопіювати адресу зображення» \n&cПосібник див.: &c&oskinsrestorer.net/skinurl
+skinsrestorer.error_ms_full={prefix} &4Помилка MS&8: &cминув час очікування API під час завантаження вашого &cскіна. Будь ласка, спробуйте пізніше. (MineSkin)
+skinsrestorer.error_ms_generic={prefix} &4Помилка MS&8: {0}
+skinsrestorer.generic_error={prefix} &4Помилка&8: &cСталася помилка під час запиту даних скіна, повторіть спробу пізніше!
+skinsrestorer.wait_a_minute={prefix} &4Помилка&8: &cЗачекайте хвилину, перш ніж знову запитувати цю тему. (Ліміт обмежений)
+skinsrestorer.error_no_skin={prefix} &4Помилка&8: &cЦей гравець не має скінів.
+skinsrestorer.skinsmenu_open={prefix} &2Відкриття меню скінів...
+skinsrestorer.skinsmenu_title_new=&9Меню скінів - Сторінка {0}
+skinsrestorer.skinsmenu_next_page=&a&l»&7 Наступна сторінка&a&l »
+skinsrestorer.skinsmenu_previous_page=&e&l«&7 Попередня сторінка&e&l «
+skinsrestorer.skinsmenu_clear_skin=&c&l[ &7Видалити скін&c&l ]
+skinsrestorer.skinsmenu_select_skin=&2Натисніть, щоб вибрати цей скін
+skinsrestorer.skin_search_message={prefix} &2Ви можете знайти скіни, які відповідають &a{0}&2 тут: \n&ahttps://namemc.com/minecraft-skins/tag/{0} \n\n&2Якщо скіни не знайдено, ви завжди можете знайти кілька скінів на https://namemc.com/minecraft-skins/tag\nВи можете встановити скін за посиланням:\n /skin https://namemc.com/skin/
+skinsrestorer.admin_set_skin={prefix} &2Ви встановили скін {0}.
+skinsrestorer.data_dropped={prefix} &2{0} дані видалено для {1}.
+skinsrestorer.admin_applyskin_succes={prefix} &2Скін гравця оновлено!
+skinsrestorer.admin_applyskin_error={prefix} &4ПОМИЛКА&8: &cскін гравця НЕ вдалося оновити!
+skinsrestorer.status_ok={prefix} &2Підключення Mojang API успішне!
+skinsrestorer.alt_api_failed={prefix} &4Помилка&8: &cAPI дані скіна перевантажено, спробуйте пізніше!
+skinsrestorer.ms_api_failed={prefix} &4Помилка&8: &cMineSkin API перевантажено, спробуйте пізніше!
+skinsrestorer.no_skin_data={prefix} &4Помилка&8: &cНемає даних скіна! У цього гравця є скін?
+skinsrestorer.reload={prefix} &2Конфіг і локалізацію перезавантажено!
+skinsrestorer.outdated={prefix} &4Ви використовуєте застарілу версію SkinsRestorer!\n&cОновіть до останньої версії на Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/
 
